Continued code cleaning and changes
- Added .env.example and settings.json.example
- Added more items to .gitignore
- Migrate settings.json to src/main/resources
- Made BotCommand.TypeOfEphemeral public
- Changed BotSettings.serverDataPath from Path to String and adjusted the logic as needed
- Added try/catch to check if the Discord API started up fine
- Adjusted HelloWorld.HelloCommand bot command option params
- HelloWorld example adjusted to use local .env and load settings.json resource
- Added comment on ServerData
- Added dotenv dependency
- Added resource section in pom